fixed stretched elements on mobile viewport

--- a/blocks/collection.css
+++ b/blocks/collection.css
@@ -8,7 +8,7 @@
 
 .collection__img{
     width: 330px;
-    height: 477px;
+    max-height: 477px;
 }
 .collection__container{
     position: relative;
